--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Todo App</h1>
-  
-  <form id="todo-form">
-    <input type="text" id="todo-input" placeholder="Enter your todo">
-    <button type="submit">Add Todo</button>
-  </form>
-  
-  <ul id="todo-list"></ul>
+  <div class="container">
+    <div class="card">
+      <h1>Todo App</h1>
+      
+      <form id="todo-form" class="todo-form">
+        <input type="text" id="todo-input" class="todo-input" placeholder="Enter your todo">
+        <button type="submit" class="todo-submit">Add Todo</button>
+      </form>
+      
+      <ul id="todo-list" class="todo-list"></ul>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
